2003-08-16  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HyperLinkColumn.cs: patch from David Pickens <dsp@rci.rutgers.edu>
	that fixes databinding when only DataTextField or DataNavigateUrlField
	is set.

2003-08-14  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ListControl.cs: patch sent by Yaacov Akiba Slama <ya@slamail.org> on
	behalf of Yaron Shkop <yaronsh@mainsoft.com> that fixes selection of
	values before assigning a data source and other issues.

2003-08-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CheckBox.cs: save viewstate when needed and correctly handle post
	data. Fixes bug #47462.

2003-08-01  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* ButtonColumn.cs: Removed additional attributes
	* CheckBox.cs: Added attribute
	* DataGrid.cs: Added attributes
	* HyperLinkColumn.cs: Changed attributes, added lamespec
	* Style.cs: Removed attributes
	* TextBox.cs: Added/ removed attributes

2003-08-01  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* AdRotator.cs: Added all attributes
	* BaseDataList.cs: Added all attributes, added lamespec, removed additional attributes
	* BaseValidator.cs: Added all attributes
	* BoundColumn.cs: Added all attributes
	* Button.cs: Added all attributes
	* ButtonColumn.cs: Added all attributes, added lamespec
	* Calendar.cs: Added all attributes, added error checks, throws more exceptions
	* CheckBox.cs: Added all attributes
	* CheckBoxList.cs: Added all attributes
	* CompareValidator.cs: Added all attributes
	* CustomValidator.cs: Added all attributes
	* DataGrid.cs: Added all attributes, more verbose exceptions, fixed signature, removed additional attributes
	* DataGridColumn.cs: Added all attributes
	* DataGridColumnCollection.cs: Added all attributes
	* DataGridPagerStyle.cs: Added all attributes
	* DataGridTableInternal.cs: Made DataGridTableInternal internal
	* DataList.cs: Added all attributes, more verbose exceptions, removed non-existing member
	* DropDownList.cs: Added all attributes